# peek-for-ynab

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierrc.cjs  Dockerfile  LICENSE  README.md  biome.json  contributing.md  eslint.config.mjs  fly.toml  index.d.ts  license.md  next.config.js  package.json  pnpm-lock.yaml  popup.tsx  readme.md  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts  wxt.config.ts
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  fly-deploy.yml  install-deps.yml  staging.yml  submit.yml  website.yml
.zed/: settings.json
components/: index.tsx
extension/: .env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts  wxt.config.ts
extension/.zed/: settings.json
extension/src/: middleware.ts  vite-env.d.ts
lib/: authContext.ts  storageContext.ts  utils.ts  ynabContext.ts
public/scripts/: theme.js
server/: .env.example  Cargo.toml  Dockerfile  README.md
server/src/: config.rs  guard.rs  lib.rs  main.rs  state.rs  types.rs  util.rs
server/src/plugins/: cors.rs  crypto.rs  logging.rs  mod.rs  security.rs  web.rs
server/src/plugins/oauth/: mod.rs  routes.rs  service.rs
server/src/routes/: health.rs  mod.rs  token.rs
server/tests/: server.rs  token.rs
src/: background.ts  content.ts  global.css  options.html  options.tsx  popup.html  popup.tsx  web.css
src/app/: layout.tsx  page.tsx
src/background/: index.ts
src/components/: AccountSelect.tsx  AccountTxsView.tsx  AccountsView.tsx  BudgetSelect.tsx  BudgetSettings.tsx  CategoriesView.tsx  CategorySelect.tsx  CategoryTxsView.tsx  CurrencyView.tsx  CurrencyViewAnimated.tsx  IconButton.tsx  IconSpan.tsx  MoveMoney.tsx  PayeeSelect.tsx  PopupLogin.tsx  PopupMain.tsx  PopupNav.tsx  SavedAccountsView.tsx  SavedCategoriesView.tsx  TestAuth.tsx  TransactionAdd.tsx  TransactionView.tsx  TxStatusIcon.tsx  index.tsx  style.css  styles.module.css  testAuth.tsx
src/contents/: detect-amounts.tsx
src/entrypoints/: background.ts
src/lib/: api.ts  authContext.ts  backgroundRefresh.ts  constants.ts  hooks.ts  indexedDBPersister.ts  logger.ts  nextCorsMiddleware.ts  notifications.ts  omnibox.ts  parsing.ts  queryClient.ts  storageContext.ts  types.ts  useAddTransaction.ts  usePopupState.ts  useTransaction.ts  utils.ts  ynabContext.ts
src/pages/: _app.tsx  _document.tsx  help.tsx  index.tsx  privacy.tsx  releases.tsx  test.tsx  testLogin.tsx
src/popup/: index.tsx
src/styles/: _animations.scss  _components.scss  _forms.scss  (+4 more)
web/: .env.example  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
workflows/: submit.yml
(+284 files in other folders)
