[package]
name = "peek-server"
version = "0.1.0"
edition = "2024"
description = "Peek for YNAB backend server"
publish = false

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.102"
axum = "0.8.9"
axum-extra = {
  version = "0.12.6",
  features = ["cookie-key-expansion", "cookie-private"]
}
axum-helmet = "1.0.2"
axum-plugin = {
  git = "https://git.fasharp.io/fa-sharp/axum-plugin",
  rev = "9f72278b3c"
}
base64 = "0.22.1"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
oauth2 = { version = "5.0.0", default-features = false }
oauth2-reqwest = "0.1.0-alpha.3"
reqwest = {
  version = "0.13.4",
  default-features = false,
  features = ["gzip", "json", "rustls"]
}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = {
  version = "3.21.0",
  default-features = false,
  features = ["alloc", "hex", "macros"]
}
subtle = { version = "2.6.1", default-features = false, features = ["std"] }
tokio = {
  version = "1.52.3",
  default-features = false,
  features = ["net", "rt", "rt-multi-thread", "signal"]
}
tower = { version = "0.5", default-features = false }
tower-http = {
  version = "0.7.0",
  features = ["cors", "fs", "limit", "timeout"]
}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
axum-test = "20.1.0"
httpmock = { version = "0.8.3", default-features = false }
